tests/neg-macros/i23008/Test_2.scala
@main def Test = Macros.buildString // error
